--- a/server2/package.json
+++ b/server2/package.json
@@ -15,9 +15,10 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.1",
+    "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.15.18",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "^22.15.29",
     "@types/nodemailer": "^6.4.17",
     "typescript": "^5.8.3"
   },
@@ -29,7 +30,7 @@
     "express": "^5.1.0",
     "googleapis": "^149.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.3",
+    "mongoose": "^8.15.1",
     "nodemailer": "^7.0.3"
   }
 }
